added tolerance slider

--- a/photoshoot.2020.08.10.html
+++ b/photoshoot.2020.08.10.html
@@ -28,12 +28,6 @@
 
         <button id="start"
             class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent send">Start</button>
-        <br><br>
-
-        <div>
-            This is the latest version. If you want to use the stable version, <a style='display:inline'
-                href='./photoshoot.2020.08.10.html'> click here </a>
-        </div>
 
     </div>
 
@@ -43,20 +37,13 @@
                 <i class="material-icons">close</i>
             </button>
         </div>
-        <label class='beep'>
-            <h5>piano <div class='output'></div>
-            </h5>
+        <label>
+            <h3>piano</h3>
             <input class="mdl-slider mdl-js-slider beep volume slider" type="range" min="0" max="100" value="0" />
         </label>
-        <label class='voice'>
-            <h5>voice <div class='output'></div>
-            </h5>
+        <label>
+            <h3>voice</h3>
             <input class="mdl-slider mdl-js-slider voice volume slider" type="range" min="0" max="100" value="0" />
-        </label>
-        <label class='tolerance'>
-            <h5>tolerance <div class='output'></div>
-            </h5>
-            <input class="mdl-slider mdl-js-slider tolerance slider" type="range" min="0" max="100" value="0" />
         </label>
 
     </div>
@@ -65,20 +52,20 @@
     <div class='centered'><img class='crosshairs' src='./assets/crosshairs.red.png' /></div>
     <div class="upper right marker status">
         <div class=" lost">
-            NOT found!
+            please ensure the marker<br> is in this frame
         </div>
         <div class=" found">
-            found!
+            please ensure the marker<br> is in the upper right corner
         </div>
         <div class=" correct">
-            Good!
+            Good. I see the marker here.
         </div>
     </div>
     <div class="msgs"></div>
-    <div class='msg'></div>
+    <div class='lower right msg'></div>
     <div class="lower left z20">
         <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect settings">
-            <i class="material-icons settings">settings</i>
+            <i class="material-icons">settings</i>
         </button>
         <button class=" reset mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
             start over
@@ -126,7 +113,7 @@
             perspectives: ['front', 'above', 'back', 'left', 'right'],
 
             targets: {
-                tolerance: 80,  // percent
+                tolerance: 0.8,
                 front: { _x: 0.7, _y: 0, _z: 0, },
                 above: { _x: 1.6, _y: 0, _z: 0 }, // above is +0.9 rads from front and back is another +0.9 rads
                 back: { _x: 2.5, _y: 0, _z: 0, },
@@ -259,7 +246,7 @@
             return array.reduce((sum, val) => sum + val) / array.length;
         }
 
-        let filterData = Array(config.marker.filter || 5).fill(0)
+        let filterData = [0, 0, 0]
         function filter(x) {
             filterData.push(x)
             if (filterData.length > config.marker.filter || 5) filterData.shift()
@@ -302,54 +289,22 @@
             return min(ratios)
         }
 
-        // beep slider
-        const beepVolume = localStorage.getItem('beep.volume') || config.volume.default
-        const $beepVolumeOutput = $('.beep .output')
+
         const $beepVolumeSlider = $('.beep.volume.slider')
-            .attr('min', config.volume.min).attr('max', config.volume.max)
-            .on('input', function () {
+            .attr('min', config.volume.min).attr('max', config.volume.max).attr('value', localStorage.getItem('beep.volume') || config.volume.default)
+            .change(function () {
                 const v = $beepVolumeSlider.val()
                 localStorage.setItem('beep.volume', v)
                 theSpeaker.setBeepVolume(v)
-                $beepVolumeOutput.html(v + ' dB')
             })
 
-
-        // voice slider
-        const voiceVolume = localStorage.getItem('voice.volume') || config.volume.default
-        const $voiceVolumeOutput = $('.voice .output')
         const $voiceVolumeSlider = $('.voice.volume.slider')
-            .attr('min', config.volume.min).attr('max', config.volume.max)
-            .on('input', function () {
+            .attr('min', config.volume.min).attr('max', config.volume.max).attr('value', localStorage.getItem('voice.volume') || config.volume.default)
+            .change(function () {
                 const v = $voiceVolumeSlider.val()
                 localStorage.setItem('voice.volume', v)
                 theSpeaker.setVoiceVolume(v)
-                $voiceVolumeOutput.html(v + ' dB')
             })
-
-
-        // tolerance slider
-        const tolerance = localStorage.getItem('targets.tolerance') || config.targets.tolerance
-        const $toleranceOutput = $('.tolerance .output')
-        const $toleranceSlider = $('.tolerance.slider')
-            .attr('min', 0).attr('max', 100)
-            .on('input', function () {
-                const t = $toleranceSlider.val()
-                localStorage.setItem('targets.tolerance', t)
-                $toleranceOutput.html(t + '%')
-            })
-
-
-        setTimeout(function () {  // weird that I have to do this
-            $beepVolumeSlider[0].MaterialSlider.change(beepVolume)  // required by MDL
-            $beepVolumeOutput.html($beepVolumeSlider.val() + ' dB')
-            $voiceVolumeSlider[0].MaterialSlider.change(voiceVolume)  // required by MDL
-            $voiceVolumeOutput.html(voiceVolume + ' dB')
-            $toleranceSlider[0].MaterialSlider.change(tolerance)  // required by MDL
-            $toleranceOutput.html(tolerance + '%')
-        }, 0)
-
-
 
         const $markerStatus = $('.marker.status').hide()
         const $crosshairs = $('img.crosshairs').hide()
@@ -473,7 +428,7 @@
                     theSpeaker.play(name)
 
                     const target = config.targets[name]
-                    const tolerance = (localStorage.getItem('targets.tolerance') || config.targets.tolerance) / 100
+                    const tolerance = config.targets.tolerance
                     const factor = Math.pow(10, config.digits || 4)
 
                     const delta = {
@@ -496,12 +451,12 @@
                     theSpeaker.pulse(filtered)
 
                     if (!sameQuad(target, rotation)) {
-                        filterData.fill(0)
+                        filterData = [0, 0, 0]
                         return
                     }
 
                     if (filtered >= tolerance) {
-                        filterData.fill(0)
+                        filterData = [0, 0, 0]
                         $msgs.append($('<div>', { html: msg }))
                         photos[name] = { position, rotation, img: snapPhoto() }
                         theSpeaker.play('good')
